--- a/demo/package.json
+++ b/demo/package.json
@@ -9,7 +9,7 @@
     }
   },
   "dependencies": {
-    "nativescript-rich-textfield": "file:///D:\\GitHub\\nativescript-rich-textfield",
+    "nativescript-rich-textfield": "file:..",
     "nativescript-theme-core": "^1.0.2",
     "nativescript-unit-test-runner": "^0.3.4",
     "tns-core-modules": "^2.5.1"
