--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
     "test.ios.device": "cd demo && tns platform remove ios && tns test ios",
     "test.android": "cd demo && tns platform remove android && tns test android --justlaunch",
     "preparedemo": "npm run build && cd demo && tns plugin remove nativescript-rich-textfield && tns plugin add .. && tns install",
-    "setup": "npm i && cd demo && npm i && cd .. && npm run build && cd demo && tns plugin add .. && cd ..",
-    "postclone": "npm i && node scripts/postclone.js"
+
+    "demo.ios.angular": "npm run preparedemoangular && cd demo-angular && tns run ios --emulator",
+    "demo.ios.device.angular": "npm run preparedemoangular && cd demo-angular && tns run ios",
+    "demo.android.angular": "npm run preparedemoangular && cd demo-angular && tns debug android --justlaunch",
+    "test.ios.angular": "cd demo-angular && tns platform remove ios && tns test ios --emulator",
+    "test.ios.device.angular": "cd demo-angular && tns platform remove ios && tns test ios",
+    "test.android.angular": "cd demo-angular && tns platform remove android",
+    "preparedemoangular": "npm run build && cd demo-angular && tns plugin remove nativescript-rich-textfield && tns plugin add .. && tns install"
   },
   "repository": {
     "type": "git",
@@ -39,10 +45,13 @@
   "bugs": {
     "url": "https://github.com/zbranzov/nativescript-rich-textfield/issues"
   },
-  "license": "MIT",
+  "license": "Apache-2.0",
   "homepage": "https://github.com/zbranzov/nativescript-rich-textfield",
   "readmeFilename": "README.md",
   "devDependencies": {
+    "@angular/compiler": "2.4.3",
+    "@angular/compiler-cli": "2.4.3",
+    "nativescript-angular": "1.3.0",
     "tns-core-modules": "^2.5.1",
     "tns-platform-declarations": "^2.5.0",
     "typescript": "^2.1.0",
