--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "2.5.0",
-      "ios": "2.5.0"
+      "android": "3.0.0",
+      "ios": "3.0.0"
     }
   },
   "scripts": {
@@ -19,7 +19,6 @@
     "test.ios.device": "cd demo && tns platform remove ios && tns test ios",
     "test.android": "cd demo && tns platform remove android && tns test android --justlaunch",
     "preparedemo": "npm run build && cd demo && tns plugin remove nativescript-rich-textfield && tns plugin add .. && tns install",
-
     "demo.ios.angular": "npm run preparedemoangular && cd demo-angular && tns run ios --emulator",
     "demo.ios.device.angular": "npm run preparedemoangular && cd demo-angular && tns run ios",
     "demo.android.angular": "npm run preparedemoangular && cd demo-angular && tns debug android --justlaunch",
@@ -48,13 +47,20 @@
   "license": "Apache-2.0",
   "homepage": "https://github.com/zbranzov/nativescript-rich-textfield",
   "readmeFilename": "README.md",
+  "dependencies": {
+    "@angular/compiler": "4.0.1",
+    "@angular/compiler-cli": "4.0.1",
+    "nativescript-angular": "rc",
+    "tns-core-modules": "rc",
+    "tns-platform-declarations": "rc",
+    "typescript": "2.2.2",
+    "@angular/core": "4.0.1",
+    "@angular/common": "4.0.1",
+    "rxjs": "5.2.0",
+    "reflect-metadata": "0.1.8",
+    "zone.js": "0.8.4"
+  },
   "devDependencies": {
-    "@angular/compiler": "2.4.3",
-    "@angular/compiler-cli": "2.4.3",
-    "nativescript-angular": "1.3.0",
-    "tns-core-modules": "^2.5.1",
-    "tns-platform-declarations": "^2.5.0",
-    "typescript": "^2.1.0",
     "prompt": "^1.0.0",
     "rimraf": "^2.5.0"
   }
